--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 			content="O sabor da vida noturna urbana. Hamburguer artesanal, ingredientes frescos e técnica precisa."
 		/>
 		<meta property="og:image" content="/foto-1.jpg" />
-		<meta property="og:url" content="https://seusite.com.br" />
+		<meta
+			property="og:url"
+			content="https://house-190-metropolitan-burgers.vercel.app/foto-1.jpg"
+		/>
 		<meta property="og:type" content="website" />
 
 		<!-- Twitter -->
@@ -40,7 +43,10 @@
 			name="twitter:description"
 			content="O sabor da vida noturna urbana. Hamburguer artesanal, ingredientes frescos e técnica precisa."
 		/>
-		<meta name="twitter:image" content="/logo.jpg" />
+		<meta
+			name="twitter:image"
+			content="https://house-190-metropolitan-burgers.vercel.app/foto-1.jpg"
+		/>
 
 		<!-- Tailwind CSS -->
 		<script src="https://cdn.tailwindcss.com"></script>
